# julia-sets

./: .gitignore  CMakeLists.txt  todo.md
include/: avx_kernels.h  callbacks.h  camera.h  cnn.h  cuda_kernels.cuh  gl_utils.h  imsave.h  julia.h  labeling.h  mandelbrot_check.h  mlp.h  mlp_constants.h  shader.h  window_2d.h  window_3d.h  xgb.h
precision_labeling/: .gitignore  best.onnx  cnn.onnx  cnn.py  export_onnx.py  mandelbrot.py  mlp_constants.h  pyproject.toml  tabular.py  visualize.py
precision_labeling/test/: main.c
precision_labeling/xgb/: main.c  xgb.c  xgb.h
src/: 2d.cpp  3d.cpp  animated.cpp  animated2.cpp  avx_kernels.cpp  cnn.cpp  cuda_kernels.cu  gl_utils.cpp  imsave.cpp  julia_avx.cpp  labeling.cpp  window_2d.cpp  window_3d.cpp  xgb.c
src/shaders/: shader_2d.fs  shader_3d.fs  shader_3d.vs  shader_3d_post.fs  shader_3d_shadow.vs  shader_bg.fs  shader_fade.fs  shader_point.fs
